Add versions endpoint Clarifies update semantics to list all versions of a data object
